[gd_scene load_steps=16 format=3 uid="uid://4gea5c8ks2xl"]

[ext_resource type="Script" path="res://Scenes/Levels/Level_7.gd" id="1_cicxn"]
[ext_resource type="Texture2D" uid="uid://cqox7iek10ogn" path="res://Images/Black.png" id="2_d55a6"]
[ext_resource type="Script" path="res://Scenes/Levels/Black.gd" id="3_6vfa3"]
[ext_resource type="Script" path="res://Scenes/Levels/Level.gd" id="4_ihtmy"]
[ext_resource type="Texture2D" uid="uid://q4xa0xe58egt" path="res://Images/Background3.png" id="5_lnnu2"]
[ext_resource type="Texture2D" uid="uid://di6l6nhadmqiw" path="res://Images/Foreground3.png" id="6_q2nql"]
[ext_resource type="PackedScene" uid="uid://cuhn2m0tamqn8" path="res://Scenes/Pots/pot.tscn" id="7_ukvw0"]
[ext_resource type="PackedScene" uid="uid://ny50yfb21ig4" path="res://Scenes/info_button.tscn" id="8_gw5js"]
[ext_resource type="AudioStream" uid="uid://bk087ibq4fhl3" path="res://Sons/succes.mp3" id="9_rfmtq"]
[ext_resource type="AudioStream" uid="uid://qa4gbyycf3uc" path="res://Sons/fail.wav" id="10_8tnba"]
[ext_resource type="Texture2D" uid="uid://pklraps8hvqd" path="res://Images/Succes/Animation_Success1.png" id="11_sxs54"]
[ext_resource type="Texture2D" uid="uid://54l1q6fttpeq" path="res://Images/Succes/Animation_Success2.png" id="12_mvxg4"]
[ext_resource type="Texture2D" uid="uid://jelckkxt4frj" path="res://Images/Succes/Animation_Success3.png" id="13_xu45h"]
[ext_resource type="Texture2D" uid="uid://cc5kxf0qvloyo" path="res://Images/Succes/Animation_Success4.png" id="14_we4er"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nhor0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_sxs54")
}, {
"duration": 1.0,
"texture": ExtResource("12_mvxg4")
}, {
"duration": 1.0,
"texture": ExtResource("13_xu45h")
}, {
"duration": 1.0,
"texture": ExtResource("14_we4er")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Level_7" type="Node2D"]
script = ExtResource("1_cicxn")

[node name="Black" type="Sprite2D" parent="."]
texture = ExtResource("2_d55a6")
centered = false
region_rect = Rect2(293, 122.5, 25, 5)
script = ExtResource("3_6vfa3")

[node name="Level" type="Node2D" parent="."]
position = Vector2(40, 0)
script = ExtResource("4_ihtmy")

[node name="Background" type="Sprite2D" parent="Level"]
texture = ExtResource("5_lnnu2")
offset = Vector2(600, 360)
region_rect = Rect2(293, 122.5, 25, 5)

[node name="Position_For_Tiles_Grid" type="Node2D" parent="Level"]

[node name="Foreground" type="Sprite2D" parent="Level"]
texture_filter = 1
texture = ExtResource("6_q2nql")
offset = Vector2(600, 360)
region_rect = Rect2(293, 122.5, 25, 5)

[node name="Pots" type="Node2D" parent="Level"]

[node name="PotBleu" parent="Level/Pots" instance=ExtResource("7_ukvw0")]
position = Vector2(1087, 530)

[node name="PotJaune" parent="Level/Pots" instance=ExtResource("7_ukvw0")]
position = Vector2(1090, 138)
pot_color = 2

[node name="PotRouge" parent="Level/Pots" instance=ExtResource("7_ukvw0")]
position = Vector2(1088, 335)
pot_color = 1
content = 5

[node name="InfoButton" parent="Level" instance=ExtResource("8_gw5js")]
position = Vector2(805, 122)
text_to_display = "Super g√©nial"

[node name="SuccessSound" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource("9_rfmtq")

[node name="FailSound" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource("10_8tnba")

[node name="AnimSuccess" type="AnimatedSprite2D" parent="Level"]
visible = false
position = Vector2(604, 363)
sprite_frames = SubResource("SpriteFrames_nhor0")

[connection signal="couleur_choisie" from="Level/Pots/PotBleu" to="." method="_on_pot_couleur_choisie"]
[connection signal="couleur_choisie" from="Level/Pots/PotJaune" to="." method="_on_pot_couleur_choisie"]
[connection signal="couleur_choisie" from="Level/Pots/PotRouge" to="." method="_on_pot_couleur_choisie"]
